fixed css alignment on interests and contact form container

--- a/ModestoPower.Mvc/Content/main.css
+++ b/ModestoPower.Mvc/Content/main.css
@@ -3425,5 +3425,5 @@ footer .text-right {
 .interested
 {
     line-height: 35px;
-    padding: 25px 0px; 
+    padding-botton: 25px; 
 }
